--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -61,21 +61,22 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_width="382dp"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/pay"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
                 android:text="* 가격 : "
-                android:textSize="20dp"
-                android:layout_marginLeft="10dp"/>
+                android:textSize="20dp" />
+
             <TextView
                 android:id="@+id/pricePost"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
@@ -90,6 +91,12 @@
                 android:layout_height="40dp"
                 android:text="* 소개글"
                 android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/contencPost"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
 
         </LinearLayout>
