--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -20,89 +20,89 @@
             android:layout_width="300dp"
             android:layout_height="200dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:background="#A9A9A9" />
+            android:src="@drawable/splash2222"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="10dp">
+            android:layout_height="40dp">
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
+                android:layout_width="113dp"
+                android:layout_height="match_parent"
                 android:text="* 책이름"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
+
             <TextView
                 android:id="@+id/bookText"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="10dp">
+            android:layout_height="40dp">
 
             <TextView
                 android:id="@+id/author"
-                android:layout_width="100dp"
+                android:layout_width="111dp"
                 android:layout_height="40dp"
                 android:text="* 저자"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
+
             <TextView
                 android:id="@+id/authorText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_width="280dp"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
         <LinearLayout
+
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal">
+            android:layout_height="40dp"
+            >
 
             <TextView
                 android:id="@+id/pay"
-                android:layout_width="wrap_content"
+                android:layout_width="111dp"
                 android:layout_height="match_parent"
-                android:text="* 가격 : "
-                android:textSize="20dp"
-                android:layout_marginLeft="10dp"/>
+                android:text="* 가격"
+                android:textSize="20dp" />
+
             <TextView
                 android:id="@+id/pricePost"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="10dp">
+            android:layout_height="72dp">
 
             <TextView
                 android:id="@+id/introduction"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
+                android:layout_width="111dp"
+                android:layout_height="wrap_content"
                 android:text="* 소개글"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
 
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="52dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/postChange_btn"
                 android:layout_width="130dp"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginLeft="50dp"
                 android:backgroundTint="@color/mainColor"
                 android:text="수정" />
@@ -111,9 +111,9 @@
             <Button
                 android:id="@+id/back_btn"
                 android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:backgroundTint="@color/mainColor"
+                android:layout_height="50dp"
                 android:layout_marginLeft="50dp"
+                android:backgroundTint="@color/mainColor"
                 android:text="뒤로" />
 
 
