--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:layout_marginLeft="55dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
-            android:background="#A9A9A9" />
+            android:src="@drawable/splash2222" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -175,4 +175,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</ScrollView>
