--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -70,7 +70,7 @@
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
-                android:text="* 가격 : "
+                android:text="* 가격"
                 android:textSize="20dp" />
 
             <TextView
@@ -143,10 +143,10 @@
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="140dp"
             android:layout_weight="1"
             android:divider="#ffffff"
-            android:dividerHeight="0dp"/>
+            android:dividerHeight="0dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
