--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -151,9 +151,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="4dp"
-            android:gravity="center_vertical">
+            android:padding="4dp">
+
             <EditText
                 android:id="@+id/et"
                 android:layout_width="wrap_content"
@@ -161,15 +162,15 @@
                 android:layout_weight="1"
                 android:hint="Input message"
                 android:inputType="textMultiLine"
-                android:padding="10dp"
-                android:maxLines="3"/>
+                android:maxLines="3"
+                android:padding="10dp" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="send"
-                android:backgroundTint="#ff8800"
                 android:layout_marginLeft="8dp"
-                />
+                android:backgroundTint="#ff8800"
+                android:text="send" />
         </LinearLayout>
 
     </LinearLayout>
