--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/picture"
             android:layout_width="300dp"
-            android:layout_height="200dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
@@ -101,6 +101,56 @@
 
         </LinearLayout>
 
+
+
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/jrv_scroll"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:orientation="vertical" >-->
+
+        <!--            <ListView-->
+        <!--                android:id="@+id/jrv_comment_list"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content">-->
+        <!--            </ListView>-->
+
+        <!--        </LinearLayout>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:orientation="vertical"
+            android:padding="4dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/edtItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Input message"
+                    android:inputType="textMultiLine"
+                    android:maxLines="3"
+                    android:padding="10dp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:backgroundTint="#ff8800"
+                    android:text="send"
+                    android:id="@+id/btnAdd"/>
+            </LinearLayout>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/postlist"></ListView>
+        </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -126,53 +176,9 @@
 
         </LinearLayout>
 
-        <!--        <LinearLayout-->
-        <!--            android:id="@+id/jrv_scroll"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:orientation="vertical" >-->
-
-        <!--            <ListView-->
-        <!--                android:id="@+id/jrv_comment_list"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content">-->
-        <!--            </ListView>-->
-
-        <!--        </LinearLayout>-->
-
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_weight="1"
-            android:divider="#ffffff"
-            android:dividerHeight="0dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="4dp"
-            android:gravity="center_vertical">
-            <EditText
-                android:id="@+id/et"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Input message"
-                android:inputType="textMultiLine"
-                android:padding="10dp"
-                android:maxLines="3"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="send"
-                android:backgroundTint="#ff8800"
-                android:layout_marginLeft="8dp"
-                />
-        </LinearLayout>
-
     </LinearLayout>
+
+
 
 
 </LinearLayout>
